--- a/testapp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -285,14 +285,10 @@
                             <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jVv-f7-RqY">
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="516" id="HBW-BO-RY5"/>
+                                    <constraint firstAttribute="height" constant="516" id="cZa-2H-fWV"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="center" image="WIB_mediabar.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Ws-hf-gjA">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" type="user" id="klb-aj-eI8"/>
-                                </constraints>
-                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="WIB_mediabar.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Ws-hf-gjA"/>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="u1G-Uj-Och">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="9kh-VO-0wb"/>
@@ -317,11 +313,11 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFB-zM-bsE">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="fPN-CZ-9id"/>
-                                    <constraint firstAttribute="width" constant="43" id="pxW-Xb-rv4"/>
+                                    <constraint firstAttribute="width" constant="32" id="5wD-7v-jox"/>
+                                    <constraint firstAttribute="height" constant="32" id="dA7-1q-mMz"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" image="Rewind.png">
+                                <state key="normal" image="Plus_button.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -334,10 +330,10 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qtl-IF-989">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="43" id="ul0-7J-2zl"/>
+                                    <constraint firstAttribute="width" constant="32" id="36x-Wy-WCB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" image="FastForward.png">
+                                <state key="normal" image="Plus_button.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -350,7 +346,6 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqT-Dd-gRg">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="Df2-CO-lQ4"/>
                                     <constraint firstAttribute="height" constant="32" id="hDY-5g-Dqs"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -368,24 +363,24 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qtl-IF-989" firstAttribute="top" secondItem="9Ws-hf-gjA" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="21e-Xt-Nos"/>
+                            <constraint firstItem="Qtl-IF-989" firstAttribute="trailing" secondItem="5m5-aF-d3p" secondAttribute="trailing" type="default" id="1a7-Ai-Zcw"/>
                             <constraint firstItem="LqT-Dd-gRg" firstAttribute="bottom" secondItem="u1G-Uj-Och" secondAttribute="bottom" type="default" id="21r-yr-U7W"/>
                             <constraint firstItem="jVv-f7-RqY" firstAttribute="bottom" secondItem="5m5-aF-d3p" secondAttribute="bottom" type="default" id="6T2-Eh-0Hj"/>
-                            <constraint firstItem="IFB-zM-bsE" firstAttribute="top" secondItem="9Ws-hf-gjA" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="7vz-s3-Vg6"/>
-                            <constraint firstItem="9Ws-hf-gjA" firstAttribute="top" secondItem="5m5-aF-d3p" secondAttribute="top" type="user" id="C8I-Hh-avL"/>
-                            <constraint firstItem="9Ws-hf-gjA" firstAttribute="bottom" secondItem="Wae-Xn-452" secondAttribute="bottom" type="user" id="IVf-eh-Tij"/>
                             <constraint firstItem="9Ws-hf-gjA" firstAttribute="trailing" secondItem="5m5-aF-d3p" secondAttribute="trailing" type="user" id="MRv-ez-HPw"/>
-                            <constraint firstItem="IFB-zM-bsE" firstAttribute="bottom" secondItem="Qtl-IF-989" secondAttribute="bottom" type="default" id="SOW-z9-Pdq"/>
+                            <constraint firstItem="Qtl-IF-989" firstAttribute="leading" secondItem="LqT-Dd-gRg" secondAttribute="leading" type="default" id="OHo-Vu-2ZC"/>
+                            <constraint firstItem="9Ws-hf-gjA" firstAttribute="bottom" secondItem="Wae-Xn-452" secondAttribute="bottom" type="default" id="PmR-bt-nae"/>
                             <constraint firstItem="9Ws-hf-gjA" firstAttribute="leading" secondItem="5m5-aF-d3p" secondAttribute="leading" type="user" id="VWn-MY-CvH"/>
+                            <constraint firstItem="Qtl-IF-989" firstAttribute="top" secondItem="9Ws-hf-gjA" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="XQ1-bj-MmL"/>
+                            <constraint firstItem="IFB-zM-bsE" firstAttribute="bottom" secondItem="Qtl-IF-989" secondAttribute="bottom" type="default" id="clj-SV-p4r"/>
                             <constraint firstItem="LqT-Dd-gRg" firstAttribute="trailing" secondItem="5m5-aF-d3p" secondAttribute="trailing" type="default" id="daN-4q-xug"/>
                             <constraint firstItem="jVv-f7-RqY" firstAttribute="leading" secondItem="5m5-aF-d3p" secondAttribute="leading" type="default" id="eAe-pw-tJ6"/>
                             <constraint firstItem="u1G-Uj-Och" firstAttribute="leading" secondItem="5m5-aF-d3p" secondAttribute="leading" type="default" id="g5H-3N-I7H"/>
+                            <constraint firstItem="IFB-zM-bsE" firstAttribute="top" secondItem="9Ws-hf-gjA" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="nod-tk-Jv5"/>
                             <constraint firstItem="jVv-f7-RqY" firstAttribute="trailing" secondItem="5m5-aF-d3p" secondAttribute="trailing" type="default" id="owp-1u-owZ"/>
                             <constraint firstItem="Wae-Xn-452" firstAttribute="top" secondItem="5m5-aF-d3p" secondAttribute="top" type="user" id="puK-dm-TfY"/>
                             <constraint firstItem="Wae-Xn-452" firstAttribute="centerX" secondItem="9Ws-hf-gjA" secondAttribute="centerX" type="default" id="rkb-z9-4vk"/>
-                            <constraint firstItem="u1G-Uj-Och" firstAttribute="top" secondItem="jVv-f7-RqY" secondAttribute="top" type="default" id="sRg-Sn-qEw"/>
+                            <constraint firstItem="jVv-f7-RqY" firstAttribute="top" secondItem="u1G-Uj-Och" secondAttribute="top" type="default" id="vpH-CP-Ic1"/>
                             <constraint firstItem="IFB-zM-bsE" firstAttribute="leading" secondItem="5m5-aF-d3p" secondAttribute="leading" type="default" id="wbi-z0-2hl"/>
-                            <constraint firstItem="Qtl-IF-989" firstAttribute="trailing" secondItem="5m5-aF-d3p" secondAttribute="trailing" type="default" id="yyg-rZ-xro"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -401,10 +396,9 @@
     </scenes>
     <resources>
         <image name="Default.png" width="320" height="480"/>
-        <image name="FastForward.png" width="40" height="39"/>
         <image name="MEDIUM_WIB_Loader.gif" width="52" height="52"/>
-        <image name="Rewind.png" width="40" height="40"/>
-        <image name="WIB_mediabar.png" width="320" height="38"/>
+        <image name="Plus_button.png" width="37" height="36"/>
+        <image name="WIB_mediabar.png" width="320" height="24"/>
         <image name="WiB_playMedia.png" width="40" height="40"/>
         <image name="cutaway.png" width="58" height="92"/>
         <image name="ic_launcher.png" width="72" height="72"/>
